force-app/main/default/objects/Invoice/Invoice.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>