force-app/main/default/objects/Invoice/fields/AccountingArea__c.field-meta.xml
<CustomField>
    <fullName>AccountingArea__c</fullName>
    <label>Accounting Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>