force-app/main/default/objects/Invoice/fields/BillingType__c.field-meta.xml
<CustomField>
    <fullName>BillingType__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>