force-app/main/default/objects/Invoice/fields/DeliveryNoteDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNoteDate__c</fullName>
    <label>Delivery Note Date</label>
    <type>Date</type>
</CustomField>