force-app/main/default/objects/Invoice/fields/DeliveryNoteNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNoteNumber__c</fullName>
    <label>Delivery Note Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>