force-app/main/default/objects/Invoice/fields/DescriptionIncotermsMandatory__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIncotermsMandatory__c</fullName>
    <label>Description Incoterms (Mandatory)</label>
    <length>70</length>
    <type>Text</type>
</CustomField>