force-app/main/default/objects/Invoice/fields/DescriptionIncotermsOptional__c.field-meta.xml
<CustomField>
    <fullName>DescriptionIncotermsOptional__c</fullName>
    <label>Description Incoterms (Optional)</label>
    <length>70</length>
    <type>Text</type>
</CustomField>