force-app/main/default/objects/Invoice/fields/DiscountForTimelyPayment__c.field-meta.xml
<CustomField>
    <fullName>DiscountForTimelyPayment__c</fullName>
    <label>Discount for timely payment</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>