force-app/main/default/objects/Invoice/fields/DiscountNote__c.field-meta.xml
<CustomField>
    <fullName>DiscountNote__c</fullName>
    <label>Discount Note</label>
    <length>70</length>
    <type>Text</type>
</CustomField>