force-app/main/default/objects/Invoice/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>