force-app/main/default/objects/Invoice/fields/DiscountPeriod__c.field-meta.xml
<CustomField>
    <fullName>DiscountPeriod__c</fullName>
    <label>Discount Period</label>
    <type>Date</type>
</CustomField>