force-app/main/default/objects/Invoice/fields/ERPInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPInvoiceNumber__c</fullName>
    <label>ERP Invoice Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>