force-app/main/default/objects/Invoice/fields/ERPReferenceEntityId__c.field-meta.xml
<CustomField>
    <fullName>ERPReferenceEntityId__c</fullName>
    <label>ERP Reference Entity Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>