force-app/main/default/objects/Invoice/fields/ERPReferenceEntityIdDate__c.field-meta.xml
<CustomField>
    <fullName>ERPReferenceEntityIdDate__c</fullName>
    <label>ERP Reference Entity Id Date</label>
    <type>Date</type>
</CustomField>