force-app/main/default/objects/Invoice/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <label>Exchange Rate</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>