force-app/main/default/objects/Invoice/fields/GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossWeight__c</fullName>
    <inlineHelpText>in Kg</inlineHelpText>
    <label>Gross Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>