force-app/main/default/objects/Invoice/fields/IncotermsCodeMandatory__c.field-meta.xml
<CustomField>
    <fullName>IncotermsCodeMandatory__c</fullName>
    <label>Incoterms-Code (Mandatory)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
                <label>Cost and Freight</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <label>Cost, Insurance and Freight</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>Carriage and Insurance Paid To</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <label>Carriage Paid To</label>
            </value>
            <value>
                <fullName>DAF</fullName>
                <label>Delivered At Frontier (Incoterms 2000)</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <label>Delivered At Place</label>
            </value>
            <value>
                <fullName>DAT</fullName>
                <label>Delivered At Terminal (Incoterms 2010)</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <label>Delivered Duty Paid</label>
            </value>
            <value>
                <fullName>DDU</fullName>
                <label>Delivered Duty Unpaid (Incoterms 2000)</label>
            </value>
            <value>
                <fullName>DEQ</fullName>
                <label>Delivered Ex Quay (Duty Paid) (Incoterms 2000)</label>
            </value>
            <value>
                <fullName>DES</fullName>
                <label>Delivered Ex Ship (Incoterms 2000)</label>
            </value>
            <value>
                <fullName>DPU</fullName>
                <label>Delivered at Place Unloaded</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <label>Ex Works</label>
            </value>
            <value>
                <fullName>FAS</fullName>
                <label>Free Alongside Ship</label>
            </value>
            <value>
                <fullName>FCA</fullName>
                <label>Free Carrier</label>
            </value>
            <value>
                <fullName>FH</fullName>
                <label>Free House / Delivered Free to Buyer (not an official Incoterm)</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <label>Free On Board</label>
            </value>
            <value>
                <fullName>UN</fullName>
                <label>Freight Collect / Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>