force-app/main/default/objects/Invoice/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZF2</fullName>
                <label>F2 Rechnung</label>
            </value>
            <value>
                <fullName>ZF5</fullName>
                <label>Proforma für Auftr.</label>
            </value>
            <value>
                <fullName>ZF8</fullName>
                <label>Pro-Forma-Rechnung für</label>
            </value>
            <value>
                <fullName>ZG2</fullName>
                <label>Gutschrift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>