force-app/main/default/objects/Invoice/fields/OrganizationDivision__c.field-meta.xml
<CustomField>
    <fullName>OrganizationDivision__c</fullName>
    <defaultValue>&quot;10&quot;</defaultValue>
    <label>Organization Division</label>
    <length>5</length>
    <type>Text</type>
</CustomField>