force-app/main/default/objects/Invoice/fields/PaymentDueDateNote__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDateNote__c</fullName>
    <label>Payment Due Date Note</label>
    <length>70</length>
    <type>Text</type>
</CustomField>