force-app/main/default/objects/Invoice/fields/PaymenTermText__c.field-meta.xml
<CustomField>
    <fullName>PaymenTermText__c</fullName>
    <label>Paymen Term Text</label>
    <length>70</length>
    <type>Text</type>
</CustomField>