force-app/main/default/objects/Invoice/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Office</valueSetName>
    </valueSet>
</CustomField>