force-app/main/default/objects/Invoice/fields/ShippingCosts__c.field-meta.xml
<CustomField>
    <fullName>ShippingCosts__c</fullName>
    <label>Shipping Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>