force-app/main/default/objects/Invoice/fields/TaxCountryInfo__c.field-meta.xml
<CustomField>
    <fullName>TaxCountryInfo__c</fullName>
    <label>Tax Country Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISOCountryCodes</valueSetName>
    </valueSet>
</CustomField>