force-app/main/default/objects/Invoice/fields/Taxnumber_c__c.field-meta.xml
<CustomField>
    <fullName>Taxnumber_c__c</fullName>
    <label>Taxnumber__c</label>
    <length>50</length>
    <type>Text</type>
</CustomField>