force-app/main/default/objects/Invoice/fields/ValueDate__c.field-meta.xml
<CustomField>
    <fullName>ValueDate__c</fullName>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>