force-app/main/default/objects/Invoice/listViews/mine.listView-meta.xml
<ListView>
    <fullName>mine</fullName>
    <columns>Name</columns>
    <columns>BillingAccount</columns>
    <columns>Status</columns>
    <columns>TotalAmount</columns>
    <columns>TotalChargeAmount</columns>
    <columns>TotalAdjustmentAmount</columns>
    <columns>TotalTaxAmount</columns>
    <columns>InvoiceDate</columns>
    <columns>DueDate</columns>
    <columns>DescriptionIncotermsMandatory__c</columns>
    <columns>ERPInvoiceNumber__c</columns>
    <columns>ERPReferenceEntityId__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>Meine Rechnungen</label>
</ListView>